--- a/Pokébec/Base.lproj/LaunchScreen.storyboard
+++ b/Pokébec/Base.lproj/LaunchScreen.storyboard
@@ -23,10 +23,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4zH-Z7-yJs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IbH-IK-0vX"/>
-                            <constraint firstItem="4zH-Z7-yJs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NhA-xs-E66"/>
-                            <constraint firstAttribute="trailing" secondItem="4zH-Z7-yJs" secondAttribute="trailing" id="Zya-BU-e1F"/>
-                            <constraint firstItem="4zH-Z7-yJs" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="e2l-u1-Xna"/>
+                            <constraint firstItem="4zH-Z7-yJs" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="MpS-Lc-84g"/>
+                            <constraint firstItem="4zH-Z7-yJs" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Z5T-yt-wvY"/>
+                            <constraint firstItem="4zH-Z7-yJs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eUS-vN-wv8"/>
+                            <constraint firstItem="4zH-Z7-yJs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="s0F-BA-ZlI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
